# irbackend

./: .gitignore  Dockerfile  Dockerfile.dev  README.md  compose.yaml  lightgbmregressornew.ipynb  main.py  pyproject.toml  requirement.txt  run.sh
.github/workflows/: ci.yaml
analytics/: analytics.py
kaggle/: drw-utility-script.ipynb  drw_utility.py  lightgbmregressor.ipynb  lightgbmregressornew.ipynb  market_state.ipynb  rf-lgbm.ipynb
notebooks/: WTI_DXY_correlation.ipynb
podman-test-harlequin/: Dockerfile
source/: analytics.py  constant.py  data_getter.py  linear_algebra.py  processing.py  yf_router.py
src/app/: main.py
src/app/routers/: __init__.py  constant.py  ka_helpers.py  ka_router.py  pdr_routers.py  processing.py  yf_helpers.py  yf_router.py
src/ingestion/: Cargo.toml
src/ingestion/src/: main.rs
src/irbackend/: main.py
src/irbackend/routers/: __init__.py  ka_router.py  yf_helpers.py
src/irbackend/utils/: yf_helpers.py
src/models/: __init__.py  linear.py  reservoir.py  tree.py
src/utils/: __init__.py  analytics.py  complex_qr.py  householder_batch.py  householder_extension.py  pure_qr.py
src/utils/dataset/: supervised.py
src/utils/test/: test_complex_householder.py  test_eigenvalue_decomposition.py  test_gmres.py  test_hessenberg.py  test_householder_batch.py  test_householder_decomposition.py  test_pure_qr.py
src/utils/transforms/: householder_batch.py  householder_extension.py  pure_qr.py
