[project]
name = "irbackend"
version = "0.1.0"
description = "Rates analytics API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deltalake>=0.25.5",
    "fastapi>=0.115.6",
    "kaggle>=1.6.17",
    "lightgbm>=4.6.0",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "polars>=1.18.0",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.34.0",
    "yfinance>=0.2.51",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "pyarrow>=19.0.1",
    "pytest>=8.3.4",
    "rich>=13.9.4",
    "ruff>=0.8.4",
]
temp = [
    "scikit-network>=0.33.3",
]
